feat: added delete and put endpoints into multiple paths

--- a/apps/backend/swagger/routes/components/gpus.yaml
+++ b/apps/backend/swagger/routes/components/gpus.yaml
@@ -68,3 +68,59 @@ gpusGpuId:
                 $ref: "../../openapi.yaml#/components/responses/NotFoundErrorResponse"
             "500":
                 $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
+    put:
+        parameters:
+            - in: path
+              name: gpuId
+              required: true
+              description: ID of GPU
+              schema:
+                  type: integer
+                  format: int64
+        responses:
+            "200":
+                description: gets gpuId
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                id:
+                                    type: integer
+                                    description: ID of the GPU.
+                                data:
+                                    $ref: "../../openapi.yaml#/components/schemas/GPUDTO"
+            "400":
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
+            "404":
+                $ref: "../../openapi.yaml#/components/responses/NotFoundErrorResponse"
+            "500":
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
+    delete:
+        parameters:
+            - in: path
+              name: gpuId
+              required: true
+              description: ID of GPU
+              schema:
+                  type: integer
+                  format: int64
+        responses:
+            "200":
+                description: gets gpuId
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                id:
+                                    type: integer
+                                    description: ID of the GPU.
+                                data:
+                                    $ref: "../../openapi.yaml#/components/schemas/GPUDTO"
+            "400":
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
+            "404":
+                $ref: "../../openapi.yaml#/components/responses/NotFoundErrorResponse"
+            "500":
+                $ref: "../../openapi.yaml#/components/responses/BadRequestErrorResponse"
