--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "scripts": {
         "format": "prettier --write .",
         "format:check": "prettier --check .",
-        "prepare": "husky"
+        "prepare": "husky",
+        "generate-backend": "openapi-generator-cli generate -i apps/backend/swagger/openapi.yaml -g typescript-node -o apps/backend/gen/",
+        "generate-frontend": "openapi-generator-cli generate -i apps/backend/swagger/openapi.yaml -g typescript-axios -o apps/frontend/gen/"
     },
     "private": true,
     "dependencies": {
@@ -40,6 +42,7 @@
         "@nx/web": "18.1.2",
         "@nx/webpack": "18.1.2",
         "@nx/workspace": "18.1.2",
+        "@openapitools/openapi-generator-cli": "^2.13.2",
         "@playwright/test": "^1.36.0",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
         "@svgr/webpack": "^8.0.1",
