--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "dependencies": {
         "@ant-design/icons": "^5.3.6",
         "@hookform/resolvers": "^3.3.4",
+        "@tanstack/react-query": "^5.32.0",
         "antd": "^5.16.0",
-        "axios": "^1.6.0",
+        "axios": "^1.6.8",
         "express": "^4.18.1",
         "next": "14.0.4",
         "react": "18.2.0",
@@ -20,6 +21,7 @@
         "react-hook-form": "^7.51.3",
         "react-router-dom": "6.11.2",
         "tslib": "^2.3.0",
+        "use-query-params": "^2.2.1",
         "zod": "^3.22.4"
     },
     "devDependencies": {
