--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     },
     "private": true,
     "dependencies": {
+        "@badrap/result": "^0.2.13",
+        "@prisma/client": "^5.13.0",
         "axios": "^1.6.0",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "express": "^4.18.1",
         "next": "14.0.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-router-dom": "6.11.2",
-        "tslib": "^2.3.0"
+        "tslib": "^2.3.0",
+        "zod": "^3.22.4",
+        "zod-validation-error": "^3.0.3"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.2.1",
@@ -79,6 +85,7 @@
         "lint-staged": "^15.2.2",
         "nx": "18.1.2",
         "prettier": "^2.8.8",
+        "prisma": "^5.13.0",
         "react-refresh": "^0.10.0",
         "ts-jest": "^29.1.0",
         "ts-node": "10.9.1",
