--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ build:
     image: node:latest
     script:
         - npm ci
-        - npx prisma generate
+        - npx prisma generate --schema=apps/backend/prisma/schema.prisma
         - npx nx run-many --target=build --verbose=true --all=true
     needs:
         - ["prepare"]
