--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ test:
     image: node:latest
     script:
         - npm ci
-        - npx prisma generate
+        - npx prisma generate --schema=apps/backend/prisma/schema.prisma
         - npx nx run-many --target=test --verbose=true --all=true --passWithNoTests
     needs:
         - ["prepare"]
