--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.6.0",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.18.1",
         "next": "14.0.4",
         "react": "18.2.0",
@@ -57,6 +58,7 @@
         "@swc/core": "~1.3.85",
         "@swc/helpers": "~0.5.2",
         "@testing-library/react": "14.0.0",
+        "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.17",
         "@types/express": "~4.17.13",
         "@types/jest": "^29.4.0",
