--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
         "@prisma/client": "^5.13.0",
         "axios": "^1.6.0",
         "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.1",
-        "next": "14.0.4",
+        "next": "^14.2.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-router-dom": "6.11.2",
@@ -59,6 +60,7 @@
         "@swc/helpers": "~0.5.2",
         "@testing-library/react": "14.0.0",
         "@types/bcryptjs": "^2.4.6",
+        "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "~4.17.13",
         "@types/jest": "^29.4.0",
