--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "next": "14.0.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-highlight-words": "^0.20.0",
         "react-hook-form": "^7.51.3",
+        "react-icons": "^5.2.1",
         "react-router-dom": "6.11.2",
         "tslib": "^2.3.0",
         "use-query-params": "^2.2.1",
@@ -60,6 +62,7 @@
         "@types/node": "18.16.9",
         "@types/react": "18.2.33",
         "@types/react-dom": "18.2.14",
+        "@types/react-highlight-words": "^0.20.0",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
         "@vitejs/plugin-react": "^4.2.0",
@@ -81,7 +84,7 @@
         "jest-environment-node": "^29.4.1",
         "jsdom": "~22.1.0",
         "lint-staged": "^15.2.2",
-        "nx": "18.1.2",
+        "nx": "^18.3.5",
         "prettier": "^2.8.8",
         "react-refresh": "^0.10.0",
         "ts-jest": "^29.1.0",
