fix: auth provider dont with local storage

--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^5.3.6",
+        "@badrap/result": "^0.2.13",
         "@hookform/resolvers": "^3.3.4",
+        "@prisma/client": "^5.13.0",
         "@tanstack/react-query": "^5.32.0",
         "antd": "^5.16.0",
-        "@badrap/result": "^0.2.13",
-        "@prisma/client": "^5.13.0",
         "axios": "^1.6.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
@@ -31,6 +31,7 @@
         "react-icons": "^5.2.1",
         "react-router-dom": "6.11.2",
         "tslib": "^2.3.0",
+        "use-local-storage-state": "^19.2.0",
         "use-query-params": "^2.2.1",
         "zod": "^3.22.4",
         "zod-validation-error": "^3.0.3"
