--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^5.3.6",
-        "@hookform/resolvers": "^3.3.4",
-        "antd": "^5.16.0",
         "@badrap/result": "^0.2.13",
+        "@hookform/resolvers": "^3.3.4",
         "@prisma/client": "^5.13.0",
+        "antd": "^5.16.0",
         "axios": "^1.6.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.1",
+        "multer": "^1.4.5-lts.1",
         "next": "^14.2.3",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -68,6 +69,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "~4.17.13",
         "@types/jest": "^29.4.0",
+        "@types/multer": "^1.4.11",
         "@types/node": "18.16.9",
         "@types/react": "18.2.33",
         "@types/react-dom": "18.2.14",
