--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@hookform/resolvers": "^3.3.4",
         "@prisma/client": "^5.13.0",
         "@tanstack/react-query": "^5.32.0",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.6",
         "antd": "^5.16.0",
         "axios": "^1.6.0",
         "bcryptjs": "^2.4.3",
@@ -31,6 +33,8 @@
         "react-hook-form": "^7.51.3",
         "react-icons": "^5.2.1",
         "react-router-dom": "6.11.2",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
         "tslib": "^2.3.0",
         "use-local-storage-state": "^19.2.0",
         "use-query-params": "^2.2.1",
