--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../tsconfig.base.json",
     "files": [],
-    "include": [],
+    "include": ["src/**/*.ts", "seed.ts"],
     "references": [
         {
             "path": "./tsconfig.app.json"
@@ -11,7 +11,14 @@
         }
     ],
     "compilerOptions": {
-        "esModuleInterop": true,
-        "strict": true
+      "target": "ES2020",
+      "module": "commonjs",
+      "lib": ["ES2020"],
+      "moduleResolution": "node",
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true,
+      "outDir": "./dist"
     }
 }
