fix: change fields to hover fields when creating components

--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -65,7 +65,7 @@
         "db-init": {
             "executor": "nx:run-commands",
             "options": {
-                "command": "./database.sh",
+                "command": "sudo ./database.sh",
                 "cwd": "apps/backend"
             }
         },
