--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
         "prisma": "^5.13.0",
         "react-refresh": "^0.10.0",
         "ts-jest": "^29.1.0",
-        "ts-node": "10.9.1",
+        "ts-node": "^10.9.2",
         "typescript": "~5.3.2",
         "url-loader": "^4.1.1",
         "vite": "~5.0.0",
