--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://user:password@localhost:5433/database"
+DATABASE_URL="postgresql://postgres.edcgsjzhyjwsvnnaueeu:[YOUR-PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres"
