--- a/apps/backend/vercel.json
+++ b/apps/backend/vercel.json
@@ -1,8 +1,8 @@
 {
-  "rewrites": [
-      {
-          "source": "/(.*)",
-          "destination": "/src"
-      }
-  ]
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/components"
+        }
+    ]
 }
